colores y agrupacion por categorias

--- a/demo.html
+++ b/demo.html
@@ -64,33 +64,35 @@
 		  Ciudad
 		</div>  
 	</div>
-	<h3><a href="#">Section 3</a></h3>
+	<h3><a href="#">Sonido</a></h3>
 	<div>
-		<p>
-		Nam enim risus, molestie et, porta ac, aliquam ac, risus. Quisque lobortis.
-		Phasellus pellentesque purus in massa. Aenean in pede. Phasellus ac libero
-		ac tellus pellentesque semper. Sed ac felis. Sed commodo, magna quis
-		lacinia ornare, quam ante aliquam nisi, eu iaculis leo purus venenatis dui.
-		</p>
-		<ul>
-			<li>List item one</li>
-			<li>List item two</li>
-			<li>List item three</li>
-		</ul>
+		<div class="filter-item" onclick="append2panel(this.id, 'C')" 
+			id="sonido-compositor">
+		  Compositor
+		</div>
+		<div class="filter-item" onclick="append2panel(this.id, 'C')" 
+			id="sonido-instrumentacion">
+		  Instrumentacion
+		</div>
+		<div class="filter-item" onclick="append2panel(this.id, 'C')" 
+			id="sonido-naturaleza">
+		  Naturaleza
+		</div> 
 	</div>
-	<h3><a href="#">Section 4</a></h3>
+	<h3><a href="#">Partituras</a></h3>
 	<div>
-		<p>
-		Cras dictum. Pellentesque habitant morbi tristique senectus et netus
-		et malesuada fames ac turpis egestas. Vestibulum ante ipsum primis in
-		faucibus orci luctus et ultrices posuere cubilia Curae; Aenean lacinia
-		mauris vel est.
-		</p>
-		<p>
-		Suspendisse eu nisl. Nullam ut libero. Integer dignissim consequat lectus.
-		Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
-		inceptos himenaeos.
-		</p>
+		<div class="filter-item" onclick="append2panel(this.id, 'C')" 
+			id="partituras-compositor">
+		  Compositor
+		</div>
+		<div class="filter-item" onclick="append2panel(this.id, 'C')" 
+			id="partituras-genero">
+		  Genero
+		</div>
+		<div class="filter-item" onclick="append2panel(this.id, 'C')" 
+			id="partituras-ritmo">
+		  Ritmo
+		</div> 
 	</div>
 </div>
 </td>
