se agregan fechas

--- a/demo.html
+++ b/demo.html
@@ -48,6 +48,10 @@
 			id="prensa-publicación">
 		  Publicacion
 		</div>
+		<div class="filter-item" onclick="append2panel(this.id, 'F')" 
+			id="prensa-fecha">
+		  Fecha
+		</div>
 	</div>
 	<h3><a href="#">Programas de mano</a></h3>
 	<div>
