se adicionan tooltips y un botos de obligatoriedad

--- a/demo.html
+++ b/demo.html
@@ -29,7 +29,7 @@
 
 <table style="width:100%; height:100%">
 <tr><td style="width:500px; background: whitesmoke; padding: 15px">
-<div class="filter-item" id="panel-filter" style="margin-bottom : 10px"> 
+<div class="filter-area" id="panel-filter" style="margin-bottom : 10px"> 
   <h2>Filtros De Busqueda</h2>
 </div>
 
